# streaming_algorithms

./: .gitignore  CMakeLists.txt  README.md  gen_gh_pages.lua  index.html  lua_cm_sketch.html  lua_matrix.html  lua_p2.html  lua_running_stats.html  lua_time_series.html  search_index.json
cmake/: doxygen.cmake  lua_binding.cmake  streaming_algorithmsConfig.in.cmake  test_module.in.h  trink.cmake
docs/: book.json  lua_cm_sketch.md  lua_matrix.md  lua_p2.md  lua_running_stats.md  lua_time_series.md
doxygen/: README_8md.html  README_8md_source.html  annotated.html  classes.html  cm__sketch_8h.html  cm__sketch_8h__incl.map  cm__sketch_8h__incl.md5  cm__sketch_8h_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  graph_legend.html  index.html  matrix_8h.html  matrix_8h__incl.map  matrix_8h__incl.md5  matrix_8h_source.html  p2_8h.html  p2_8h__incl.map  p2_8h__incl.md5  p2_8h_source.html  running__stats_8h.html  running__stats_8h__incl.map  running__stats_8h__incl.md5  time__series_8h.html  (+6 more)
lua_binding/: CMakeLists.txt  cm_sketch.c  index.md  matrix.c  p2.c  p2.md  running_stats.c  running_stats.md  streaming_algorithms.def  time_series.c
lua_binding/lua51/: CMakeLists.txt
lua_binding/luasandbox/: CMakeLists.txt  test_sandbox.c
lua_binding/luasandbox/sandboxes/: index.html
lua_binding/luasandbox/sandboxes/heka/: index.html
lua_binding/luasandbox/sandboxes/heka/analysis/: heka_message_monitor.html  heka_message_monitor.lua  heka_message_volume_monitor.lua  index.html
lua_binding/tests/: test.lua  test_cms_serialize.lua  test_matrix_serialize.lua  test_matrix_serialize_flt.lua  test_p2_serialize.lua  test_rs_serialize.lua  test_ts_serialize.lua
(+13 files in other folders)
